@@ -61,4 +61,5 @@
     <div class="author"><?lsmb text("Author: [_1]", n.created_by) ?></div>
     <div class="note_contents"><?lsmb n.note ?></div>
 </div>
+<?lsmb END ?>
 </div>
